// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends astroturf/loader to the JS rule 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "test": /\\\\\\.jsx\\?/,
              "use": Array [
                Object {
                  "loader": "babel-loader",
                },
                Object {
                  "loader": "astroturf/loader",
                  "options": Object {
                    "extension": ".module.css",
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`passes options to astroturf/loader 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "test": /\\\\\\.jsx\\?/,
              "use": Array [
                Object {
                  "loader": "babel-loader",
                },
                Object {
                  "loader": "astroturf/loader",
                  "options": Object {
                    "extension": ".module.css",
                    "styledTag": "styled",
                    "tagName": "css",
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
